k3s/k3s-trusted/workloads/servarr/sabnzbd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
  - name: http
    port: 8080
    targetPort: 8080
