k3s/k3s-trusted/workloads/servarr/sabnzbd/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.home.balzers.xyz`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: home-balzers-xyz-tls
